--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/services/admintaskfactory.js"></script>
+        <script src="scripts/controllers/adminHomeController.js"></script>
         <!-- endbuild -->
 </body>
 </html>
