--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/base.css">
     <!-- endbuild -->
   </head>
   <body ng-app="shoutApp">
@@ -21,22 +22,72 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">shout</h3>
-      </div>
 
-      <div ng-view=""></div>
+    <!-- Navbar goes here -->
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <nav class="navbar navbar-default navbar-fixed-top mypageheader">
+                    <div class="container-fluid">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand mybrand" href="#">Shout</a>
+                        </div>
 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+
+
+                        </div><!-- /.navbar-collapse -->
+                    </div><!-- /.container-fluid -->
+                </nav>
+            </div>
+        </div>
+
+      <div ng-view="" class="mycontent"></div>
+
+    <!--<div id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12  col-md-12 col-sm-12 col-xs-12">
+                <ul class="list-unstyled">
+                    <li class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="services.html">Services</a>
+                    </li>
+                    <li class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="404.html">Studies</a>
+                    </li>
+                    <li class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="404.html">References</a>
+                    </li>
+                    <li class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="404.html">Login</a>
+                    </li>
+                    <li class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="404.html">Press</a>
+                    </li>
+                    <li class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="404.html">Contact</a>
+                    </li>
+                    <li class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="404.html">Impressum</a>
+                    </li>
+                </ul>
+                    </div>
+            </div><!--/row-->
+
+        </div><!--/container-->
+    </div>-->
+
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
