--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,9 @@
             </div>
         </div>
 
-      <div ng-view="" class="mycontent"></div>
+      <div ui-view class="mycontent"></div>
+
+
 
     <!--<div id="footer">
         <div class="container">
@@ -86,7 +88,7 @@
             </div><!--/row-->
 
         </div><!--/container-->
-    </div>-->
+    </div>
 
 
 
@@ -120,6 +122,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
