--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker-bs3.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -24,31 +25,31 @@
     <!-- Add your site or application content here -->
 
     <!-- Navbar goes here -->
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <nav class="navbar navbar-default navbar-fixed-top mypageheader">
-                    <div class="container-fluid">
-                        <!-- Brand and toggle get grouped for better mobile display -->
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand mybrand" href="#">Shout</a>
-                        </div>
+        <!--<div class="row">-->
+            <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+                <!--<nav class="navbar navbar-default navbar-fixed-top mypageheader">-->
+                    <!--<div class="container-fluid">-->
+                        <!--&lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;-->
+                        <!--<div class="navbar-header">-->
+                            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">-->
+                                <!--<span class="sr-only">Toggle navigation</span>-->
+                                <!--<span class="icon-bar"></span>-->
+                                <!--<span class="icon-bar"></span>-->
+                                <!--<span class="icon-bar"></span>-->
+                            <!--</button>-->
+                            <!--<a class="navbar-brand mybrand" href="#">Shout</a>-->
+                        <!--</div>-->
 
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <!--&lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;-->
+                        <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
 
 
 
-                        </div><!-- /.navbar-collapse -->
-                    </div><!-- /.container-fluid -->
-                </nav>
-            </div>
-        </div>
+                        <!--</div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;-->
+                    <!--</div>&lt;!&ndash; /.container-fluid &ndash;&gt;-->
+                <!--</nav>-->
+            <!--</div>-->
+        <!--</div>-->
 
       <div ui-view class="mycontent"></div>
 
@@ -123,6 +124,10 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="bower_components/ng-bs-daterangepicker/src/ng-bs-daterangepicker.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -132,6 +137,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/admintaskfactory.js"></script>
         <script src="scripts/controllers/adminHomeController.js"></script>
+        <script src="scripts/directives/header.js"></script>
         <!-- endbuild -->
 </body>
 </html>
