--- a/app/index.html
+++ b/app/index.html
@@ -24,32 +24,34 @@
 
     <!-- Add your site or application content here -->
 
-    <!-- Navbar goes here -->
-        <!--<div class="row">-->
-            <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
-                <!--<nav class="navbar navbar-default navbar-fixed-top mypageheader">-->
-                    <!--<div class="container-fluid">-->
-                        <!--&lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;-->
-                        <!--<div class="navbar-header">-->
-                            <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">-->
-                                <!--<span class="sr-only">Toggle navigation</span>-->
-                                <!--<span class="icon-bar"></span>-->
-                                <!--<span class="icon-bar"></span>-->
-                                <!--<span class="icon-bar"></span>-->
-                            <!--</button>-->
-                            <!--<a class="navbar-brand mybrand" href="#">Shout</a>-->
-                        <!--</div>-->
+     Navbar goes here
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <nav class="navbar navbar-default navbar-fixed-top mypageheader">
+                    <div class="container-fluid">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand mybrand" href="#">Shout</a>
+                        </div>
 
-                        <!--&lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;-->
-                        <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                            <div class="navbar-right nav navbar-nav"> <a href="#menu-toggle" class="" id="menu-toggle">Toggle Menu</a></div>
 
 
+                        </div><!-- /.navbar-collapse -->
 
-                        <!--</div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;-->
-                    <!--</div>&lt;!&ndash; /.container-fluid &ndash;&gt;-->
-                <!--</nav>-->
-            <!--</div>-->
-        <!--</div>-->
+                    </div><!-- /.container-fluid -->
+                </nav>
+            </div>
+        </div>
 
       <div ui-view class="mycontent"></div>
 
@@ -94,15 +96,15 @@
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+     <!--<script>-->
+       <!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
+       <!--(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
+       <!--m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
+       <!--})(window,document,'script','//www.google-analytics.com/analytics.js','ga');-->
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
+       <!--ga('create', 'UA-XXXXX-X');-->
+       <!--ga('send', 'pageview');-->
+    <!--</script>-->
 
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
@@ -128,6 +130,7 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <script src="bower_components/ng-bs-daterangepicker/src/ng-bs-daterangepicker.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -138,6 +141,14 @@
         <script src="scripts/services/admintaskfactory.js"></script>
         <script src="scripts/controllers/adminHomeController.js"></script>
         <script src="scripts/directives/header.js"></script>
+        <script src="scripts/controllers/adminAddEventController.js"></script>
+        <script src="scripts/directives/mydatepicker.js"></script>
         <!-- endbuild -->
+    <script>
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+        });
+    </script>
 </body>
 </html>
