--- a/app/index.html
+++ b/app/index.html
@@ -143,6 +143,7 @@
         <script src="scripts/directives/header.js"></script>
         <script src="scripts/controllers/adminAddEventController.js"></script>
         <script src="scripts/directives/mydatepicker.js"></script>
+        <script src="scripts/controllers/myCtrl.js"></script>
         <!-- endbuild -->
     <script>
         $("#menu-toggle").click(function(e) {
