--- a/app/index.html
+++ b/app/index.html
@@ -140,6 +140,7 @@
         <script src="scripts/controllers/adminHomeController.js"></script>
         <script src="scripts/directives/header.js"></script>
         <script src="scripts/controllers/adminAddEventController.js"></script>
+    <script src="scripts/controllers/adminViewEventController.js"></script>
         <script src="scripts/directives/mydatepicker.js"></script>
 
         <!-- endbuild -->
