--- a/app/index.html
+++ b/app/index.html
@@ -133,7 +133,6 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/angular-ui-map/ui-map.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -145,6 +144,7 @@
         <script src="scripts/controllers/adminAddEventController.js"></script>
     <script src="scripts/controllers/adminViewEventController.js"></script>
         <script src="scripts/directives/mydatepicker.js"></script>
+    <script src="scripts/directives/addbutton.js"></script>
 
         <!-- endbuild -->
     <script>
