done with validation of adEvent form. started with eventWidget

--- a/app/index.html
+++ b/app/index.html
@@ -145,6 +145,7 @@
     <script src="scripts/controllers/adminViewEventController.js"></script>
         <script src="scripts/directives/mydatepicker.js"></script>
     <script src="scripts/directives/addbutton.js"></script>
+    <script src="scripts/directives/eventwidget.js"></script>
 
         <!-- endbuild -->
     <script>
