--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap-daterangepicker/daterangepicker-bs3.css" />
+      <link rel="stylesheet" href="../bower_components/bootstrap-sweetalert/lib/sweet-alert.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -141,6 +142,7 @@
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="../bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="../bower_components/angular-ui-map/ui-map.js"></script>
+    <script src="../bower_components/bootstrap-sweetalert/lib/sweet-alert.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
