--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap-daterangepicker/daterangepicker-bs3.css" />
       <link rel="stylesheet" href="../bower_components/bootstrap-sweetalert/lib/sweet-alert.css" />
+      <link rel="stylesheet" href="../bower_components/angucomplete/angucomplete.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -143,6 +144,8 @@
     <script src="../bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="../bower_components/angular-ui-map/ui-map.js"></script>
     <script src="../bower_components/bootstrap-sweetalert/lib/sweet-alert.js"></script>
+    <script src="../bower_components/angucomplete/angucomplete.js"></script>
+
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -152,6 +155,7 @@
         <script src="scripts/directives/header.js"></script>
         <script src="scripts/controllers/adminAddEventController.js"></script>
     <script src="scripts/controllers/adminViewEventController.js"></script>
+    <script src="scripts/controllers/adminController.js"></script>
         <script src="scripts/directives/mydatepicker.js"></script>
     <script src="scripts/directives/addbutton.js"></script>
     <script src="scripts/directives/eventwidget.js"></script>
