--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../bower_components/bootstrap-daterangepicker/daterangepicker-bs3.css" />
       <link rel="stylesheet" href="../bower_components/bootstrap-sweetalert/lib/sweet-alert.css" />
       <link rel="stylesheet" href="../bower_components/angucomplete/angucomplete.css" />
+      <link rel="stylesheet" href="../bower_components/angucomplete-alt/angucomplete-alt.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -145,6 +146,7 @@
     <script src="../bower_components/angular-ui-map/ui-map.js"></script>
     <script src="../bower_components/bootstrap-sweetalert/lib/sweet-alert.js"></script>
     <script src="../bower_components/angucomplete/angucomplete.js"></script>
+    <script src="../bower_components/angucomplete-alt/angucomplete-alt.js"></script>
 
     <!-- endbower -->
     <!-- endbuild -->
