--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap-daterangepicker/daterangepicker-bs3.css" />
-      <link rel="stylesheet" href="../bower_components/bootstrap-sweetalert/lib/sweet-alert.css" />
-      <link rel="stylesheet" href="../bower_components/angucomplete/angucomplete.css" />
+    <link rel="stylesheet" href="../bower_components/bootstrap-sweetalert/lib/sweet-alert.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -126,7 +125,9 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/es5-shim/es5-shim.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/json3/lib/json3.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
     <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
@@ -145,7 +146,6 @@
     <script src="../bower_components/angular-ui-map/ui-map.js"></script>
     <script src="../bower_components/bootstrap-sweetalert/lib/sweet-alert.js"></script>
     <script src="../bower_components/angucomplete/angucomplete.js"></script>
-
     <!-- endbower -->
     <!-- endbuild -->
 
