--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,8 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap-daterangepicker/daterangepicker-bs3.css" />
-      <link rel="stylesheet" href="../bower_components/bootstrap-sweetalert/lib/sweet-alert.css" />
-      <link rel="stylesheet" href="../bower_components/angucomplete/angucomplete.css" />
-      <link rel="stylesheet" href="../bower_components/angucomplete-alt/angucomplete-alt.css" />
+    <link rel="stylesheet" href="../bower_components/bootstrap-sweetalert/lib/sweet-alert.css" />
+    <link rel="stylesheet" href="../bower_components/angucomplete-alt/angucomplete-alt.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -127,7 +126,9 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/es5-shim/es5-shim.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/json3/lib/json3.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
     <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
@@ -147,17 +148,18 @@
     <script src="../bower_components/bootstrap-sweetalert/lib/sweet-alert.js"></script>
     <script src="../bower_components/angucomplete/angucomplete.js"></script>
     <script src="../bower_components/angucomplete-alt/angucomplete-alt.js"></script>
-
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/services/admintaskfactory.js"></script>
+
+    <script src="scripts/services/loginservice.js"></script>
         <script src="scripts/directives/header.js"></script>
         <script src="scripts/controllers/adminAddEventController.js"></script>
     <script src="scripts/controllers/adminViewEventController.js"></script>
     <script src="scripts/controllers/adminController.js"></script>
+    <script src="scripts/controllers/login.js"></script>
         <script src="scripts/directives/mydatepicker.js"></script>
     <script src="scripts/directives/addbutton.js"></script>
     <script src="scripts/directives/eventwidget.js"></script>
