--- a/app/index.html
+++ b/app/index.html
@@ -26,82 +26,12 @@
 
     <!-- Add your site or application content here -->
 
-     Navbar goes here
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <nav class="navbar navbar-default navbar-fixed-top mypageheader">
-                    <div class="container-fluid">
-                        <!-- Brand and toggle get grouped for better mobile display -->
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand mybrand" href="#"> <i style="padding-right: 10px;" class="glyphicon glyphicon-home"></i>Rolling Scenes</a>
-                        </div>
+     <!--Navbar goes here-->
 
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav navbar-right">
-
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Settings <span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">Action</a></li>
-                                        <li><a href="#menu-toggle" class="" id="menu-toggle">Show/Hide Menu</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div><!-- /.navbar-collapse -->
-
-                    </div><!-- /.container-fluid -->
-
-
-                </nav>
-            </div>
-        </div>
 
       <div ui-view class="mycontent"></div>
 
 
-
-    <!--<div id="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12  col-md-12 col-sm-12 col-xs-12">
-                <ul class="list-unstyled">
-                    <li class="col-md-3 col-sm-4 col-xs-6">
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li class="col-md-3 col-sm-4 col-xs-6">
-                        <a href="services.html">Services</a>
-                    </li>
-                    <li class="col-md-3 col-sm-4 col-xs-6">
-                        <a href="404.html">Studies</a>
-                    </li>
-                    <li class="col-md-3 col-sm-4 col-xs-6">
-                        <a href="404.html">References</a>
-                    </li>
-                    <li class="col-md-3 col-sm-4 col-xs-6">
-                        <a href="404.html">Login</a>
-                    </li>
-                    <li class="col-md-3 col-sm-4 col-xs-6">
-                        <a href="404.html">Press</a>
-                    </li>
-                    <li class="col-md-3 col-sm-4 col-xs-6">
-                        <a href="404.html">Contact</a>
-                    </li>
-                    <li class="col-md-3 col-sm-4 col-xs-6">
-                        <a href="404.html">Impressum</a>
-                    </li>
-                </ul>
-                    </div>
-            </div><!--/row-->
-
-        </div><!--/container-->
-    </div>
 
 
 
