added logger code

--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
     <script src="bower_components/angucomplete-alt/angucomplete-alt.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
 
